# commem

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  exclusion.dic
include/: commem.h
test/: test_bstr.cpp  test_commem.cpp  test_commem.h  test_heap.cpp  test_safearray.cpp
